- Remove view all button - fix background on mobile - fix icon sosmed

--- a/style.css
+++ b/style.css
@@ -653,7 +653,9 @@ html.is-animating .transition-fade {
   position: relative;
   width: 100%;
   height: 100%;
-  background: url("img/bg-profile.jpg") no-repeat center;
+  background: url("img/bg-profile.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
   background-size: cover;
   -webkit-background-size: cover;
   -moz-background-size: cover;
